# getdata-actions-notion

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  run_parallel_survey.py  run_survey.sh  test_basic.py
.github/workflows/: crypto-data-collection.yml  exchange-survey.yml  simple-test.yml  sync-notion-to-github.yml  test-crypto-collection.yml  verify-secrets.yml
docs/: deployment-status.md  exchange-survey-guide.md  github-actions-setup.md  github-sync-guide.md  notion_schema.md  project-structure.md  realdata-implementation.md
docs/guides/: exchange-survey.md
scripts/: README.md  complete-survey-and-sync.py  explore_all_exchanges.py  survey_all_102_exchanges.py  test_csv_export.py  test_enhanced_uploader.py
scripts/github-sync/: export_notion_to_github.py
scripts/notion-upload/: upload_survey_detailed.py  upload_survey_to_notion.py
scripts/survey/: explore_all_exchanges.py  survey_all_102_parallel.py
scripts/utils/: test_github_sync.py  test_realdata.py
src/: config.py  main.py  models.py
src/collectors/: base.py  manager.py
src/github/: __init__.py  notion_to_github.py
src/notion/: client.py  database_manager.py  direct_uploader.py  enhanced_uploader.py  rate_limiter.py  realdata_uploader.py  simple_uploader.py  uploader.py
src/utils/: csv_writer.py  notion_to_csv.py
